--- a/README
+++ b/README
@@ -1,11 +1,5 @@
-Written for the good of humanity by Brandon Whaley (redkrieg@gmail.com).  Use as you wish in this capacity.
+pynagdash is a Nagios (http://www.nagios.org/) dashboard written using Flask (http://flask.pocoo.org/), jQuery (http://jquery.com/), and DataTables (http://datatables.net/).
 
-Right now, just a simple library file called nagstatus.py.  Calling nagstatus.get_nag_status("/path/to/status.dat") will return a dict object of the following format:
-return_object[host_name]['HOST' or service_name][property]
+Development is still in progress and merge requests are welcome.
 
-Properties are straight from status.dat, nothing fancy here
-
-(Ab)uses try in multiple ways in the 'better to ask forgiveness' spirit.
-
-
-flaskapp.py requires flask, uses jquery and jquery-tablesorter (not included).  At this stage, everything is VERY 'playground'
+Example nagdash.cfg and nagdash.wsgi files are included.  You'll need to customize both for your environment.  Be sure to change the SECRET_KEY in nagdash.cfg.  Failing to do so can result in users faking their authentication details.
